fixed project image overlap with navbar

--- a/src/components/Sidebar.css
+++ b/src/components/Sidebar.css
@@ -8,6 +8,8 @@
 	padding: 10px;
 	background: var(--text-color);
 }
+
+
 .menu-icon {
 	display: none;
 }
@@ -96,6 +98,7 @@
 		position: fixed;
 		top: 0;
 		left: 0;
+		z-index: 1000;
 		display: flex;
 		flex-direction: row;
 		align-items: center;
@@ -105,7 +108,7 @@
 
 	.middle {
 		flex-direction: row;
-		gap: 30px;
+		gap: 10px;
 		padding-right: 70px;
 	}
 
@@ -114,9 +117,7 @@
 	}
 
 	.middle .bottom {
-		display: flex;
-		flex-direction: row;
-		gap: 25px;
+		flex-direction: column;
 	}
 }
 
