--- a/src/pages/Projects.css
+++ b/src/pages/Projects.css
@@ -10,15 +10,15 @@
 }
 
 .projects {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 10px;
+	display: flex;
+	flex-wrap: wrap;
+	gap: 10px;
 }
 
 .projects-container h1 {
 	font-size: 50px;
 	font-weight: bold;
-    padding-bottom: 20px;
+	padding-bottom: 20px;
 }
 
 .project-card {
@@ -30,15 +30,15 @@
 }
 
 .project-info h4 {
-    font-weight: bold;
-    padding-bottom: 5px;
+	font-weight: bold;
+	padding-bottom: 5px;
 }
 
 .project-description {
-    font-size: 15;
-    color: var(--background-color);
-    margin-bottom: 10px;
-    text-align: center;
+	font-size: 15;
+	color: var(--background-color);
+	margin-bottom: 10px;
+	text-align: center;
 }
 
 .project-image-container {
@@ -53,7 +53,7 @@
 	width: 100%;
 	height: 100%;
 	object-fit: fill;
-    
+
 	transition: transform 0.2s ease-in-out;
 }
 
@@ -62,8 +62,8 @@
 }
 
 .project-overlay {
-    display: flex;
-    flex-direction: column;
+	display: flex;
+	flex-direction: column;
 	position: absolute;
 	bottom: 0;
 	left: 0;
@@ -114,7 +114,9 @@
 @media (max-width: 1070px) {
 	.projects-container {
 		padding-left: 50px;
-		
+		display: flex;
+		flex-direction: column;
+		align-items: flex-start;
 	}
 
 	.projects {
